--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Imtixon</title>
+    <title>Fleet</title>
     <link rel="shortcut icon" href="./assets/logo.svg" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
